# tumfl

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tumfl.spec
.github/workflows/: pylint.yml  python-publish.yaml  test.yml
extensive_testing/: test.py  test_lexer.py  test_parser.py
lua-tests/: SOURCE.txt  calls.lua  errors.lua
test/: test_dependency_resolver.py  test_formatter.py  test_lexer.py  test_parser.py  test_to_lua_type.py  test_to_python_type.py
test/AST/: test_Boolean.py  test_Number.py  test_String.py  test_Variable.py
test/minifier/: test_block_optimization.py  test_integration.py  test_replace_name.py  test_simplify_expressions.py
test/test_files/: a.lua  config.lua  config_test.lua  dual_path.lua  invalid_require_path.lua  invalid_require_type.lua  main.lua  multi_import.lua  nonexistent_path.lua  number_path.lua  require_expr.lua
test/test_files/b/: c.lua  d.lua
tumfl/: Token.py  __init__.py  __main__.py  basic_walker.py  config.py  dependency_resolver.py  error.py  formatter.py  lexer.py  parser.py  semantic_analyzer.py  to_lua_type.py  to_python_type.py  token.py  utils.py
tumfl/AST/: ASTNode.py  BaseFunctionDefinition.py  Boolean.py  Compound.py  FunctionCall.py  MethodInvocation.py  Number.py  String.py  Variable.py  __init__.py  ast_node.py  base_function_definition.py
tumfl/AST/Expression/: BinOp.py  Boolean.py  ExpFunctionCall.py  ExpFunctionDefinition.py  ExpMethodInvocation.py  Expression.py  Index.py  Name.py  NamedIndex.py  Nil.py  Number.py  String.py  Table.py  TableField.py  UnOp.py  Vararg.py  Variable.py  __init__.py
tumfl/AST/Statement/: Assign.py  Block.py  Break.py  Chunk.py  FunctionCall.py  FunctionDefinition.py  Goto.py  If.py  IterativeFor.py  Label.py  LocalAssign.py  LocalFunctionDefinition.py  MethodInvocation.py  NumericFor.py  Repeat.py  Semicolon.py  Statement.py  While.py  __init__.py
tumfl/AST/expression/: __init__.py  bin_op.py  boolean.py  exp_function_call.py  exp_function_definition.py  exp_method_invocation.py  expression.py  index.py  name.py  named_index.py  nil.py  number.py  string.py  table.py  table_field.py  un_op.py  vararg.py  variable.py
tumfl/AST/statement/: __init__.py  assign.py  block.py  break_.py  chunk.py  function_call.py  function_definition.py  goto.py  if_.py  iterative_for.py  label.py  local_assign.py  local_function_definition.py  method_invocation.py  numeric_for.py  repeat.py  semicolon.py  statement.py  while_.py
tumfl/minifier/: __init__.py  block_optimization.py  combine_local.py  minify.py  resolve_indexes.py  shorten_names.py  simplify_expressions.py
tumfl/minifier/util/: __init__.py  find_names.py  mutable_bool.py  remove_name.py  replace_name.py  replacements.py  scope.py  shared_list.py  variable.py
