[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[project]
name = "tumfl"
version = "0.3.8"
description = "The Ultimate Minimizer For Lua: minimize your lua scripts"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["lua", "minimizer", "ast"]
license = "MIT"
authors = [{ name = "Fabian Wunsch" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["watchdog"]

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "mypy", "flake8", "coverage", "pylint"]

[project.urls]
homepage = "https://github.com/stormworks-utils/tumfl"
repository = "https://github.com/stormworks-utils/tumfl"

[tool.setuptools]
packages = [
    "tumfl",
    "tumfl.AST",
    "tumfl.AST.expression",
    "tumfl.AST.statement",
    "tumfl.minifier",
    "tumfl.minifier.util",
]

[project.scripts]
tumfl = "tumfl.__main__:main"
